# ib-daily-picker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: GETTING-STARTED.md  README.md  deepresearch.md  didyouknow.md  flowspace-research.md  plan-0-constitution.md  plan-1a-explore.md  plan-1b-specify.md  plan-2-clarify.md  plan-2b-prep-issue.md  plan-3-architect.md  plan-3a-adr.md  plan-4-complete-the-plan.md  plan-5-phase-tasks-and-brief.md  plan-5a-subtask-tasks-and-brief.md  plan-6-implement-phase.md  plan-6a-update-progress.md  plan-7-code-review.md  plan-8-merge.md  tad.md  util-0-handover.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy.yml  lint.yml  test.yml
docs/adr/: 001-database-architecture.md  002-stock-data-provider.md  003-flow-data-provider.md  004-cli-framework.md  005-strategy-format.md  006-llm-integration.md  007-web-framework.md  008-discord-bot.md  009-azure-hosting.md  README.md
infra/: main.bicep
src/ib_daily_picker/: __init__.py  __main__.py  cli.py  config.py
src/ib_daily_picker/analysis/: __init__.py  evaluator.py  indicators.py  signals.py  strategy_loader.py  strategy_schema.py
src/ib_daily_picker/backtest/: __init__.py  metrics.py  monte_carlo.py  reporter.py  runner.py
src/ib_daily_picker/discord/: __init__.py  bot.py  embeds.py  scheduler.py  storage.py
src/ib_daily_picker/discord/cogs/: __init__.py  admin.py  analysis.py  core.py  data.py  journal.py
src/ib_daily_picker/fetchers/: __init__.py  base.py  finnhub_fetcher.py  stock_fetcher.py  unusual_whales.py  yfinance_fetcher.py
src/ib_daily_picker/journal/: __init__.py  manager.py  metrics.py
src/ib_daily_picker/llm/: __init__.py  client.py  strategy_converter.py
src/ib_daily_picker/models/: __init__.py  flow.py  recommendation.py  stock.py  trade.py
src/ib_daily_picker/store/: __init__.py  database.py  repositories.py
src/ib_daily_picker/web/: __init__.py  dependencies.py  main.py
src/ib_daily_picker/web/routes/: __init__.py
src/ib_daily_picker/web/routes/api/: __init__.py  analysis.py  backtest.py  charts.py  flows.py  journal.py  signals.py  stocks.py  strategies.py  watchlist.py
src/ib_daily_picker/web/routes/pages/: __init__.py  analysis.py  backtest.py  (+4 more)
src/ib_daily_picker/web/templates/: base.html
strategies/: bollinger_reversal.yaml  example_rsi_flow.yaml  golden_cross.yaml  macd_flow_momentum.yaml  triple_ema_trend.yaml  vwap_flow_breakout.yaml
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_blob_storage.py  test_journal.py  test_repositories.py
tests/unit/: __init__.py  test_config.py
tests/unit/backtest/: test_monte_carlo.py  test_runner.py  test_walk_forward.py
tests/unit/discord/: __init__.py  test_analysis_cog.py  test_bot.py
tests/unit/journal/: __init__.py  test_metrics.py
tests/unit/llm/: test_strategy_converter.py
tests/unit/models/: test_stock.py
tests/unit/web/: __init__.py  test_api.py
(+16 files in other folders)
